--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css"/>
-
+    <link href="https://fonts.googleapis.com/css?family=Kalam:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Caveat|Cookie|Courgette|Great+Vibes|Monda|Montserrat+Alternates|Old+Standard+TT|Philosopher|Sacramento|Simonetta&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
